<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#DDC54F2F"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#AC4E35"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:backgroundTint="#007E1C1C"
            android:tint="#FFF309"
            app:srcCompat="@drawable/ic_info"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        app:autoFocusButtonVisible="true"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@color/white"
        app:maskColor="#77191818">

    </com.budiyev.android.codescanner.CodeScannerView>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#BD842F"
        android:gravity="center"
        android:text="@string/lblResult"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnSearchOnBrowser"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#A65C0C"
        android:text="@string/btnSearch" />

</LinearLayout>
